# ai_labs

./: .gitignore  Makefile  README.md  pyproject.toml
ai_labs/: run.py
ai_labs/data/: cleaned_hc_articles.json  datacleaning.py
ai_labs/scripts/: initialize_db.py
ai_labs/src/: config.py
ai_labs/src/chat/: assistant.py
ai_labs/src/database/: chroma_client.py  document_processor.py
ai_labs/src/models/: conversation.py
ai_labs/src/utils/: connectivity_checker.py  logger.py  text_splitter.py
